# openenv-git-conflict-resolver

./: .gitignore  Dockerfile  README.md  hackathon_guidelines.txt  hackathon_page.txt  inference.py  openenv.yaml  problem_statement.txt  pyproject.toml  test_server.py
server/: __init__.py  app.py  env.py  graders.py  main.py  models.py  requirements.txt  reward.py  tasks.py
