[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-git-conflict-resolver"
version = "1.0.0"
description = "Git Conflict Resolver OpenEnv Environment"
authors = [
    {name = "Agent Smith"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.0.0",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/doosaganesh/openenv-git-conflict-resolver"
